# sber_test_task

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  lint  pyproject.toml
.github/workflows/: actions.yml
cat_shop/: __init__.py  app.py  config.py
cat_shop/admin/: controller.py
cat_shop/api/: breeds.py  cats.py  menu.py  urls.py  views.py
cat_shop/core/: commands.py  normalizer.py
cat_shop/db/: models.py
cat_shop/db/migrations/versions/: 057dbeb4b5aa_.py  1c1e47883ae4_.py  622357fc3bda_.py
cat_shop/fixtures/: breeds.json  kitties.json
cat_shop/templates/: index.html
cat_shop/tests/: conftest.py  test_cats.py
cat_shop/views/: views.py
cats_infra/: docker-compose.yaml  nginx.conf
